src/objects/Comentario_Orden_de_Trabajo__c.object
<CustomObject>
    <description>Representa cada uno de los comentarios asociados a una orden de trabajo.</description>
    <fields>
        <fullName>COT_LKP_Orden_de_trabajo__c</fullName>
        <description>Orden de Trabajo al que se vincula el Comentario. Representa la FK al objeto WorkOrder. Para resolver esta FK en integración (servicios web) y migración (plantillas DataLoader) se debe informar el valor del campo External ID del objeto Work Order (WorkOrder.OTR_TXT_Num_OrdenTrabajo_HS__c): Nº de Orden de Trabajo HomeServe</description>
        <label>Servicio</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Comentarios Servicio</relationshipLabel>
        <relationshipName>COT_REL_Comentarios_Orden_de_Trabajo</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>COT_SEL_Tipo__c</fullName>
        <label>Tipo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Tipos_Comentario</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>COT_TXT_Comentario__c</fullName>
        <label>Comentario</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Comentario Servicio</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Identificador</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comentarios Servicio</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Longitud_minima_del_comentario</fullName>
        <active>true</active>
        <description>El comentario debe ser mayor que 14 caracteres.</description>
        <errorConditionFormula>LEN(COT_TXT_Comentario__c)&lt;15</errorConditionFormula>
        <errorDisplayField>COT_TXT_Comentario__c</errorDisplayField>
        <errorMessage>El comentario debe ser mayor que 14 caracteres.</errorMessage>
    </validationRules>
</CustomObject>